Fix horizontal overflow issue on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
     @apply w-14 h-14 flex items-center justify-center;
 
 }
-body {
+html,body {
   overflow-x: hidden;
 }
 
